--- a/apps/website/src/pages/docs/components/layout/sidebar/usage.mdx
+++ b/apps/website/src/pages/docs/components/layout/sidebar/usage.mdx
@@ -327,7 +327,7 @@ export default function Page() {
 ### Toggle variant
 
 ```jsx height=400px overflow=hidden
-import { Box, Spacer, IconButton, Image } from '@chakra-ui/react'
+import { Box, Spacer, IconButton, Image, useDisclosure } from '@chakra-ui/react'
 import {
   AppShell,
   Sidebar,
@@ -354,7 +354,7 @@ export default function ToggleVariant() {
     <AppShell
       sidebar={
         <Sidebar
-          breakpoints={{ base: false }}
+          toggleBreakpoint={false}
           variant={isOpen ? 'default' : 'compact'}
           transition="width"
           transitionDuration="normal"
@@ -494,17 +494,17 @@ export default function Page() {
 
 ### Breakpoints
 
-The sidebar will automatically close on small screens. You can change this behavior by customizing the breakpoints.
+The sidebar will automatically close on small screens. You can change this behavior by customizing the `toggleBreakpoint`. Breakpoints are disabled for the `compact` variant.
 
-Default breakpoints.
+The default breakpoint is `lg`, to disable the breakpoint set the `toggleBreakpoint` to `false`.
 
 ```tsx live=false
-<Sidebar breakpoints={{ base: true, lg: false }} />
+<Sidebar toggleBreakpoint="lg" />
 ```
 
-Disabling closing the sidebar on small screens.
+Custom `toggleBreakpoint` value:
 
-```tsx
+```jsx height=400px overflow=hidden
 import {
   Box,
   Spacer,
@@ -514,6 +514,7 @@ import {
   MenuButton,
   MenuList,
   MenuItem,
+  Image,
 } from '@chakra-ui/react'
 import {
   AppShell,
@@ -536,7 +537,7 @@ export default function Page() {
   return (
     <AppShell
       sidebar={
-        <Sidebar breakpoints={{ base: false }}>
+        <Sidebar toggleBreakpoint="xl">
           <SidebarToggleButton />
           <SidebarSection direction="row">
             <Image
