feat: remove divider from theme

--- a/apps/website/src/pages/docs/core/upgrading-to-v2.mdx
+++ b/apps/website/src/pages/docs/core/upgrading-to-v2.mdx
@@ -60,7 +60,7 @@ New CommandBar component.
 
 ### 4. Deprecated features
 
-#### Button, ButtonGroup, IconButton, Menu, MenuItem
+#### Button, ButtonGroup, IconButton, Menu, MenuItem, Divider
 
 These components are no longer re-exported from Saas UI. You can import them directly from Chakra UI.
 
@@ -275,13 +275,3 @@ The `condensed` variant has been renamed to `compact`.
 #### ErrorBoundary
 
 ErrorBoundary `errorComponent` property renamed to `fallback` to be consistent with Suspense.
-
-#### Divider
-
-`Divider` has a new `DividerLabel` component that can be used to render a label inside the divider.
-
-```tsx
-<Divider>
-  <DividerLabel>OR</DividerLabel>
-</Divider>
-```
