chore: update pricing links

--- a/apps/website/src/i18n/ui.json
+++ b/apps/website/src/i18n/ui.json
@@ -20,7 +20,7 @@
         "view-storybook": "View storybook",
         "view-theme-source": "Theme source",
         "view-video": "Watch video",
-        "buy-pro": "Get Pro",
+        "buy-pro": "Buy Pro",
         "beta": "Beta"
       }
     },
