--- a/apps/website/src/pages/docs/components/feedback/banner/usage.mdx
+++ b/apps/website/src/pages/docs/components/feedback/banner/usage.mdx
@@ -104,7 +104,7 @@ export default function Status() {
       <Banner status="info">
         <BannerIcon />
         <BannerTitle>
-          Pre-order Saas UI Pro now to get 50% discount.
+          Your subscription will renew in 3 days.
         </BannerTitle>
       </Banner>
     </Stack>
