--- a/apps/website/src/pages/docs/pro/overview.mdx
+++ b/apps/website/src/pages/docs/pro/overview.mdx
@@ -8,7 +8,7 @@ description: A modern clean dashboard ui that your customers will love.
   might change and more documentation will be added along the way.
 </Info>
 
-Saas UI Pro is a frontend starter pack for SaaS projects and includes advanced components and tools for billing, onboarding, feature management, sign-up flows and much more.
+Saas UI Pro is a frontend starterkit for SaaS projects and includes advanced and pre-built components and tools for billing, onboarding, feature management, sign-up flows and much more.
 It comes with a boilerplate app that runs on NextJS and Electron.
 
 <SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
@@ -43,25 +43,12 @@ It comes with a boilerplate app that runs on NextJS and Electron.
 
 ## What is included?
 
-Saas UI Pro is currently in beta, the first release is expected later this year.
-This release includes the following components, utilities and templates. Get early access by [pre-ordering here](https://appulse.gumroad.com/l/saas-ui-pro-pre-order).
+Saas UI Pro is currently in beta, and constantly evolving based on your valuable feedback 🤩. Full roadmap can [be found here](https://roadmap.saas-ui.dev/roadmap).
 
-### Base components
+### Components
 
-AppShell, Sidebar, Page, Toolbar, Filters, BulkActions, DataGrid, Onboarding, Charts, Timeline, DatePicker, DateRangePicker, FeatureFlags.
+Filters, Page, Toolbar, Filters, BulkActions, Kanban Board, DataGrid, Onboarding, Charts, Timeline, FeatureFlags, Editor.
 
-### Pre-build template and components
+### Pre-build templates and components
 
-Authentication, Mocked GraphQL API, Paddle integration, Navigation, Dashboard, ListPage, SplitPage, Onboarding Flow, Contacts Module, Settings Pages, Billing Plans, User Management, User Profile Settings, Help Center.
-
-### Future releases
-
-This list is constantly evolving based on your valuable feedback 🤩. Full roadmap can [be found here](https://roadmap.saas-ui.dev/roadmap).
-
-- File uploads (Dropzone / s3 integration)
-- Multiple themes
-- Changelog
-- Feedback dialog
-- Rating component
-- CLI (scaffolding / generators)
-- DataGrid virtualization
+Authentication, Lemonsqueezy integration, Navigation, Dashboard, ListPage, SplitPage, Onboarding Flow, Contacts Module, Settings Pages, Billing Plans, User Management, User Profile Settings, Help Center.
